--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="https://static.vecteezy.com/system/resources/previews/002/638/212/non_2x/b-alphabet-letter-logo-for-business-and-company-with-wings-and-black-and-white-grey-color-corporate-brading-and-lettering-icon-with-simple-design-vector.jpg"
@@ -11,11 +11,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink=""><button mat-button
+                    <a class="nav-link" aria-current="page" routerLink=""><button mat-button
                             color="primary">Home</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"><button mat-button color="primary" routerLink="viewdata">Students</button></a>
+                    <a class="nav-link"><button mat-button color="primary"
+                            routerLink="displaydata">Students</button></a>
                 </li>
             </ul>
         </div>
