--- a/src/app/user-crud/displaydata/displaydata.component.html
+++ b/src/app/user-crud/displaydata/displaydata.component.html
@@ -1,7 +1,9 @@
-<mat-form-field appearance="standard">
+<!-- <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-</mat-form-field>
+</mat-form-field> -->
+<div class="my-3 search">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input class="form-control">
+</div>
 
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
@@ -15,7 +17,7 @@
         <!-- Progress Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}}% </td>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
         </ng-container>
 
         <!-- Name Column -->
@@ -45,6 +47,15 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
             <td mat-cell *matCellDef="let row"> {{row.department}} </td>
         </ng-container>
+        <ng-container matColumnDef="action" class="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <td mat-cell *matCellDef="let row">
+                <a routerLink="/displaydata/editdata/{{row.id}}">
+                    <button class="" mat-raised-button color="primary">Edit</button>
+                </a>
+                <button class="mx-2" mat-raised-button color="accent" (click)="delemployee(row.id);">Delete</button>
+            </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -55,5 +66,5 @@
         </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator class="pg" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
